Add responsive hamburger menu and fix slider arrows visibility on small screens
- Replaced static nav-menu with toggleable hamburger menu for better mobile UX
- Ensured navigation closes automatically after link click
- Fixed issue where slider arrows were hidden on small screens
- Improved responsive layout with updated media queries

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         <a href="#" class="logo">
             <img src="icons/logo.png" alt="Gray Light Logo">
         </a>
-        <ul class="nav-menu">
+        <button id="menuToggle" class="menu-toggle" aria-label="Toggle navigation">
+            &#9776;
+        </button>
+        <ul class="nav-menu" id="navMenu">
             <li><a href="#home" class="nav-link">Home</a></li>
             <li><a href="#apps" class="nav-link">Apps</a></li>
             <li><a href="#about" class="nav-link">About</a></li>
