--- a/privacy/index.html
+++ b/privacy/index.html
@@ -10,14 +10,16 @@
 <div class="container">
     <h1>Privacy Policy</h1>
 
-    <p>This Privacy Policy explains how the app ("the App") collects, uses, and protects your information. By using the
-        App, you agree to the terms of this policy.</p>
+    <p>This Privacy Policy explains how the app (“the App”) collects, uses, and protects your information. It outlines
+        what data may be gathered, why it is necessary, how it is stored, and under what circumstances it may be shared.
+        We are committed to safeguarding your privacy and ensuring transparency in how your data is handled. By using
+        the App, you acknowledge and agree to the terms described in this policy.</p>
 
     <h2>Information Collected</h2>
     <p>The App may collect the following types of information:</p>
     <ul>
-        <li><strong>User Preferences:</strong> Stored locally using SharedPreferences (e.g., alarm settings, theme,
-            notifications).
+        <li><strong>User Preferences:</strong> Stored locally using SharedPreferences or Jetpack DataStore (e.g., alarm
+            settings, theme, notifications).
         </li>
         <li><strong>Device Information:</strong> Such as device model, OS version, screen size, language, and unique
             device identifier (used for crash reporting or analytics).
@@ -34,14 +36,18 @@
     </ul>
 
     <h2>Permissions</h2>
-    <p>The App may request the following permissions, depending on features you use:</p>
+    <p>The app may request certain permissions depending on the features you choose to use:</p>
     <ul>
-        <li><strong>Internet:</strong> To fetch content, display ads, or check connectivity.</li>
-        <li><strong>Camera:</strong> Required for features like QR scanning or photo capture.</li>
-        <li><strong>Storage Access:</strong> To select images from the gallery or save content locally.</li>
-        <li><strong>Notification Access:</strong> To deliver reminders, alarms, and important updates.</li>
+        <li><strong>Location (Approximate or Precise):</strong> Required for direction and location-based functionality.
+        </li>
+        <li><strong>Camera:</strong> Required for features such as scanning or capturing images.</li>
+        <li><strong>Storage Access:</strong> Used for saving content or selecting images from your device.</li>
+        <li><strong>Internet:</strong> Required to fetch data, display advertisements, or check connectivity.</li>
+        <li><strong>Notification Access:</strong> To send reminders, alarms, or important updates.</li>
+        <li><strong>Vibration:</strong> For haptic feedback or silent alerts.</li>
     </ul>
-    <p>Permissions are requested only when required and can be managed in your device's system settings.</p>
+    <p>Permissions are requested only when required and can be managed in your device's system settings. If a permission
+        is denied, related features may be limited or unavailable.</p>
 
     <h2>Use of Information</h2>
     <p>The collected information may be used to:</p>
@@ -86,13 +92,23 @@
     <p>User data is stored as long as needed for the purpose it was collected, or as required by law. Analytics and
         crash data are anonymized and retained for service improvement.</p>
 
-    <h2>User Rights</h2>
-    <p>You have the right to access, correct, or delete your data. To exercise these rights, contact us via the email
-        below.</p>
+    <h2>Advertising</h2>
+    <p>The app may display advertisements provided by third-party networks such as Google AdMob. Depending on your
+        region and choices, ads may be personalized based on device information and app usage data. You can control ad
+        preferences through your device settings or opt-out via the ad provider’s privacy tools.</p>
 
-    <h2>International Data Transfers</h2>
-    <p>If user data is transferred outside your country, we ensure appropriate legal and technical protections are
-        applied.</p>
+    <h2>Your Choices and Rights</h2>
+    <p>You can manage permissions from your device settings. You may also request access to, correction, or deletion of
+        any personal data stored (if applicable) by contacting us via email. If you choose not to grant certain
+        permissions, some features of the app may be limited.</p>
+
+    <h2>Analytics</h2>
+    <p>The app may use anonymized analytics tools to understand usage patterns, such as which screens are visited or
+        which features are most used. This data helps improve usability and performance over time.</p>
+
+    <h2>Error and Crash Reporting</h2>
+    <p>The app may automatically collect anonymized crash reports and error logs through third-party services to help
+        diagnose problems and improve stability. This data does not include personally identifiable information.</p>
 
     <h2>Policy Updates</h2>
     <p>This Privacy Policy may be updated from time to time. Changes will be reflected on this page and, where
@@ -101,6 +117,8 @@
     <h2>Contact</h2>
     <p>If you have any questions or requests regarding this Privacy Policy, please contact us at:</p>
     <p><a href="mailto:graylight.destek@gmail.com">graylight.destek@gmail.com</a></p>
+
+    <p><strong>Effective Date:</strong> July 30, 2025</p>
 
     <footer>
         © 2025 Gray Light. All rights reserved.
