Migrate app details to external JSON file, refactor scripts, and improve UI/UX styling
- Replaced hardcoded app data in `script.js` with JSON file for easier updates.
- Refactored functions for better readability and reusability.
- Improved slider functionality and fixed navigation scroll issues.
- Updated `style.css` with enhanced responsiveness, modernized card hover effects, and revamped gradients.
- Added favicon to `index.html` for branding consistency.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gray Light - Lightweight Android Apps</title>
+    <link rel="icon" type="image/png" href="icons/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -67,12 +68,22 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>
-                        At Gray Light, our mission is to cut through the digital clutter. We believe that technology
-                        should be an enabler, not a burden. That's why we focus on creating Android productivity apps
-                        that are not only powerful but also incredibly lightweight and easy to use. Our values are
-                        rooted in user-centric design, performance, and privacy. We design our software with a
-                        minimalist philosophy, ensuring every feature serves a clear purpose, and every interaction is
-                        intuitive, to create tools that genuinely make a difference in your productivity.
+                        At Gray Light, we understand that in today’s fast-paced digital world, simplicity is power.
+                        Our mission is to clear away unnecessary complexity, allowing technology to serve as a seamless
+                        tool
+                        that empowers rather than overwhelms. We craft Android apps designed not only to boost your
+                        productivity but to do so with elegance and minimal resource use.<br><br>
+
+                        Every product we build reflects our commitment to intuitive design, performance, and respect for
+                        user privacy. We believe great software should feel natural and effortless, integrating smoothly
+                        into your daily workflow without distractions or burdensome permissions.<br><br>
+
+                        Our minimalist philosophy means we focus only on what truly matters — features that enhance your
+                        efficiency and interactions that feel fluid and purposeful. We aim to create tools that aren’t
+                        just functional, but genuinely transformative, helping you reclaim time and focus in a cluttered
+                        digital landscape.<br><br>
+
+                        At Gray Light, less is more, and simplicity is the ultimate sophistication.
                     </p>
                 </div>
             </div>
