Integrate Google AdSense script and add Blog link to navigation menu

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-3081923169265705">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3081923169265705"
+            crossorigin="anonymous"></script>
     <title>Gray Light - Lightweight Android Apps</title>
     <link rel="icon" type="image/png" href="icons/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,6 +30,8 @@
             <li><a href="#apps" class="nav-link">Apps</a></li>
             <li><a href="#about" class="nav-link">About</a></li>
             <li><a href="#contact" class="nav-link">Contact</a></li>
+            <li><a target="_blank" rel="noopener noreferrer" href="https://graylightapp.blogspot.com" class="nav-link">Blog</a>
+            </li>
         </ul>
     </nav>
 </header>
