Remove Google AdSense script and refine hero section content for clarity and engagement

--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-adsense-account" content="ca-pub-3081923169265705">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3081923169265705"
-            crossorigin="anonymous"></script>
     <title>Gray Light - Lightweight Android Apps</title>
     <link rel="icon" type="image/png" href="icons/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,8 +38,9 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>Crafting Simplicity, Boosting Productivity.</h1>
-            <p>We build lightweight, intuitive, and powerful Android apps designed to streamline your daily tasks
-                without slowing you down.</p>
+            <p>We create clean, fast, and user-friendly Android apps that help you focus on what truly matters.
+                Our goal is to simplify complex tasks, enhance your efficiency, and deliver powerful tools
+                that work seamlessly—anytime, anywhere.</p>
         </div>
     </section>
 
