--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="pOMGxU0bpp1PWiFspCqMMlFdGKy8f0lOejvEV5mBO14" />
     <title>Gray Light - Lightweight Android Apps</title>
     <link rel="icon" type="image/png" href="icons/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
